fix: update layout to enable vertical scrolling and wrap logo in link for navigation

--- a/src/output.css
+++ b/src/output.css
@@ -777,6 +777,10 @@ body {
   margin-bottom: calc(25px * var(--tw-space-y-reverse));
 }
 
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
 .whitespace-nowrap {
   white-space: nowrap;
 }
